# crpc

./: Makefile  Makefile.am  Makefile.in  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  liblog.la  libtool
.libs/: liblog.lai  liblog.so.0.0.0
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
include/: buffer.h  crpc_cli.h  crpc_data.h  crpc_srv.h  define.h  hash.h  security.h
src/: tags
src/.deps/: panda_log.Plo
src/crpc/: Makefile  Makefile.am  Makefile.bk  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  crpc_cli.c  crpc_server.c  crpc_srv.c
src/crpc/.deps/: crpc_cli.Po  crpc_srv.Po
src/crpc/autom4te.cache/: output.0  requests  traces.0  traces.1
src/demo/: Makefile  Makefile.am  cli0  crpc_client0.c  demo_cli0  demo_cli0.c
src/executive/: Makefile  Makefile.am  Makefile.bk  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  crpcd.c  daemon.c  exe
src/executive/.deps/: crpc_cli.Po  crpc_srv.Po  daemon.Po
src/executive/autom4te.cache/: output.1  requests  traces.0  traces.1
src/include/: buffer.h  crpc_srv.h  log.h  tlv.h
src/includes/: buffer.h  crpc_server.h  define.h  error.h  list.h  log.h  tlv.h
src/protobuf/: Makefile.am  crpc_protobuf.pb-c.c  crpc_protobuf.pb-c.h  crpc_protobuf.proto
src/utils/: Makefile  Makefile.am  Makefile.in  buffer.c  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  hash.c  libtool  libutil.la  list.c  log.c  security.c  security.lo  tlv.c  tlv.lo
src/utils/.deps/: buffer.Plo  hash.Plo  list.Plo  log.Plo  security.Plo  tlv.Plo
src/utils/.libs/: libutil.lai  libutil.so.0.0.0  log
src/utils/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
