AUTOMAKE_OPTIONS = foreign

noinst_LTLIBRARIES = libtuils.la
libutils_la_SOURCES = \
					  $(top_srcdir)/src/utils/buffer.c \
					  $(top_srcdir)/src/utils/hash.c \
					  $(top_srcdir)/src/utils/list.c \
					  $(top_srcdir)/src/utils/log.c \
					  $(top_srcdir)/src/utils/security.c \
					  $(top_srcdir)/src/utils/tlv.c

INCLUDES = \
		   $(top_srcdir)/include
